--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -1,2 +1,5 @@
-<h1>Comments#index</h1>
-<p>Find me in app/views/comments/index.html.erb</p>
+<h1>All Posts</h1>
+
+<%= link_to "New Post", new_post_path %>
+
+<%= render @posts %>
