Added hmtl to all views for comments AND added _forms x

--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -1,5 +1,5 @@
-<h1>All Posts</h1>
+<h1>All Post Comments</h1>
 
-<%= link_to "New Post", new_post_path %>
+<%= link_to "New Comment", new_post_comment_path %>
 
-<%= render @posts %>
+<%= render @post.comments  %>
