--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -1,16 +1,5 @@
-<h1>Post Show Page</h1>
+<h1>Comment Show Page</h1>
 
-  <%= render @post %>
-  <br><br>
-  <%= link_to "New Comment", new_post_comment_path(@comment) %>
+<%= render @comment %>
 
-  <h3>Comments on this Post: </h3>
-
-  <%= render @post.comments %>
-
-<br>
-
-<%= link_to "Edit", edit_post_path(@post) %> |
-<%= link_to "Back", posts_path %> |
-
-<%= link_to "Destroy", @post, method: :delete, data: { confirm: "Are you sure?" } %>
+<%= link_to "Delete Song", post_comment_path, method: :delete, data: { confirm: "Are you sure?" } %>
