--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,2 +1,16 @@
-<h1>Posts#show</h1>
-<p>Find me in app/views/posts/show.html.erb</p>
+<h1>Post Show Page</h1>
+
+  <%= render @post %>
+  <br><br>
+  <%= link_to "New Comment", new_post_comment_path(@comment) %>
+
+  <h3>Comments on this Post: </h3>
+
+  <%= render @post.comments %>
+
+<br>
+
+<%= link_to "Edit", edit_post_path(@post) %> |
+<%= link_to "Back", posts_path %> |
+
+<%= link_to "Destroy", @post, method: :delete, data: { confirm: "Are you sure?" } %>
