--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -6,8 +6,8 @@
   <%= f.label :name %>
   <%= f.text_field :name %>
 
-  <%= f.label :blog %>
-  <%= f.text_field :blog %>
+  <%= f.label :body %>
+  <%= f.text_field :body %>
 
   <%= f.submit %>
 
