--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,7 +2,7 @@
 
   <%= render @post %>
   <br><br>
-  <%= link_to "New Comment", new_post_comment_path(@comment) %>
+  <%= link_to "New Comment", new_post_comment_path(@post) %>
 
   <h3>Comments on this Post: </h3>
 
