--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,6 +1,6 @@
 <p>Title: <%= post.title %></p>
 <p>Name: <%= post.name %></p>
-<p>Body: <%= post.blog %></p>
+<p>Body: <%= post.body %></p>
 
 <%= link_to "Show Page", post if action_name == "index" %> |
 <%= link_to "Edit Page", edit_post_path(post) %>
