--- a/app/views/comments/_form.hmtl.erb
+++ b/app/views/comments/_form.hmtl.erb
@@ -1,3 +1,16 @@
+<% if @comment.errors.any? %>
+	
+	<h3><%= pluralize(@comment.errors.count, "error" ) %> prohibited this comment from being saved:</h3>
+
+	<ul>
+		<% @comment.errors.full_messages.each do |msg| %>
+			<li> <%= msg %> </li>
+		<% end %>
+	</ul>
+
+<% end %>
+
+
 <%= form_for([@post, @comment]) do |f| %>
 
 	<%= f.label :comment %>
