--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,3 +1,17 @@
+<% if @post.errors.any? %>
+
+  <h3><%= pluralize(@post.errors.count, "error" ) %> prohibited this post from being saved:</h3>
+
+  <ul>
+    <% @post.errors.full_messages.each do |msg| %>
+      <li> <%= msg %> </li>
+    <% end %>
+  </ul>
+
+<% end %>
+
+
+
 <%= form_for(@post) do |f| %>
 
   <%= f.label :title %>
