Changed destroy btn to delete

--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -2,4 +2,4 @@
 
 <%= render @comment %>
 
-<%= link_to "Delete Song", post_comment_path, method: :delete, data: { confirm: "Are you sure?" } %>
+<%= link_to "Delete Comment", post_comment_path, method: :delete, data: { confirm: "Are you sure?" } %>
